tests/invalid/comprehension_range_too_many_args/main.py
def run_case() -> None:
    x: list[int] = [i for i in range(1, 2, 3, 4)]

if __name__ == "__main__":
    run_case()
